--- a/main/templates/class/class_view_arduino.html
+++ b/main/templates/class/class_view_arduino.html
@@ -139,7 +139,8 @@
                                 <li>
                                     <span class="li_title">판매가</span>
                                     <form id="prd_form" method="post" action="/run_order/">
-                                        <input type="hidden" id="title" name="title" value="aAt"> <!--arduino-AI-trashcan -->
+                                        {% csrf_token %}
+                                        <input type="hidden" id="prd_code" name="prd_code" value="aAt"> <!--arduino-AI-trashcan -->
                                      </form>
                                     <p><span class="price">45,000</span> won</p>
                                 </li>
